# chamsae

./: .gitignore  Cargo.toml  Cross.toml  makefile  readme.md  spec_v0.4.0.md
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  configuration.md  development.md  references.md  roadmap.md  spec_v0.1.0.md  spec_v0.2.0.md  spec_v0.3.0.md  spec_v0.5.0.md  spec_v0.6.0.md
installer/: chamsae.iss
src/: config.rs  guid.rs  hangul.rs  lib.rs  logger.rs  main.rs  registry.rs  user_dict.rs
src/bat/: install.bat  uninstall.bat
src/com/: class_factory.rs  dll_module.rs  mod.rs
src/tsf/: candidate_window.rs  dpi.rs  edit_session.rs  icon.rs  key_handler.rs  mod.rs  registration.rs  text_service.rs  tray_icon.rs
src/win32/: mod.rs  window.rs
