[package]
name = "chamsae"
version = "0.2.0"
edition = "2021"

[lib]
name = "chamsae"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chamsae"
path = "src/bin/cli.rs"

[[bin]]
name = "chamsae_window_test"
path = "src/bin/window_test.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_TextServices",
] }
windows-core = "0.58"
