[package]
name = "chamsae"
version = "0.6.5"
edition = "2021"

[lib]
name = "chamsae"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chamsae"
path = "src/bin/cli.rs"

[[bin]]
name = "chamsae_window_test"
path = "src/bin/window_test.rs"

[[bin]]
name = "chamsae_settings"
path = "src/bin/settings.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_Graphics_Gdi",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
] }
windows-core = "0.58"
